# photo_rename

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac  photo_rename.perl  photo_rename.pl
src/: main.cpp
