AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

bin_PROGRAMS = photo_rename
photo_rename_SOURCES = src/main.cpp \
	                src/easyexif/exif.h src/easyexif/exif.cpp

dist_noinst_SCRIPTS = autogen.sh

# See example project article:
# http://www.boyunjian.com/do/article/snapshot.do?uid=5405543492228647375


