## Photo Rename utility

AC_INIT([Photo Rename], [0.0.1], [github.com/zflat],
        [photo_rename], [http://github.com/zflat/photo_rename])
AC_PREREQ([2.69])
AM_INIT_AUTOMAKE([1.14.1 -Wall no-define])

AX_CXX_COMPILE_STDCXX_11([noext], [mandatory])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
